--- a/Server/package.json
+++ b/Server/package.json
@@ -13,11 +13,14 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"mongoose": "^5.11.13"
+		"mongoose": "^5.11.13",
+		"pino": "^6.11.0",
+		"pino-pretty": "^4.3.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.22",
+		"@types/pino": "^6.3.5",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
 		"eslint": "^7.18.0",
