--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
 	"author": "Christopher Jeamme",
 	"license": "ISC",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.11.13",
@@ -18,6 +19,7 @@
 		"pino-pretty": "^4.3.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.9",
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.22",
 		"@types/pino": "^6.3.5",
