--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-jwt": "^6.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.13",
 		"pino": "^6.11.0",
 		"pino-pretty": "^4.3.0"
@@ -21,6 +23,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.9",
 		"@types/express": "^4.17.11",
+		"@types/express-jwt": "^6.0.0",
 		"@types/node": "^14.14.22",
 		"@types/pino": "^6.3.5",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
