--- a/Server/.eslintrc.json
+++ b/Server/.eslintrc.json
@@ -11,6 +11,7 @@
     },
     "plugins": ["@typescript-eslint"],
     "rules": {
+        "camelcase": "off",
         "indent": ["error", 4]
     }
 }
