--- a/Server/package.json
+++ b/Server/package.json
@@ -24,6 +24,7 @@
 		"@types/cors": "^2.8.9",
 		"@types/express": "^4.17.11",
 		"@types/express-jwt": "^6.0.0",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/node": "^14.14.22",
 		"@types/pino": "^6.3.5",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
