--- a/Application/.eslintrc.json
+++ b/Application/.eslintrc.json
@@ -36,6 +36,7 @@
             "files": ["*.html"],
             "extends": ["plugin:@angular-eslint/template/recommended"],
             "rules": {
+                "camelcase": "off",
                 "no-useless-constructor": "off",
                 "@typescript-eslint/no-useless-constructor": ["error"]
             }
